@@ -28,6 +28,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>ru.BouH.engine.game.Game</mainClass>
+                    <arguments>
+                        <argument>--add-exports</argument>
+                        <argument>java.desktop/com.sun.media.sound=ALL-UNNAMED</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
